--- a/content/themes/nichole-theme/default.hbs
+++ b/content/themes/nichole-theme/default.hbs
@@ -47,6 +47,8 @@
         {{> header}}
 
         <section id="content">
+          <!-- Static Menu (Dynamic menu not yet available in Ghost 0.3) -->
+          {{> navigation}}
 
             {{! The 'inner' divs provide a nice wrapper for content to help with fluidity and responsiveness }}
             <div id="inner-content" class="wrap clearfix inner-content">
