--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -525,24 +525,36 @@ html {
   height: 100%;
   max-height: 100%; }
 
-.header {
+.home-template .header {
   position: relative;
   width: 100%;
   height: 100%;
   margin-bottom: 0rem;
   background-color: #39CFAA;
   display: table; }
-
-.vertical-theme-header {
+.home-template .vertical-theme-header {
   display: table-cell;
   vertical-align: middle; }
-
-.inner-theme-header {
+.home-template .inner-theme-header {
   position: relative;
   width: 80%;
   max-width: 700px;
   margin: 0px auto;
   text-align: center; }
+.home-template .header-title {
+  text-decoration: none;
+  color: #3A4145; }
+
+.theme-button {
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 10px;
+  color: #FFF; }
+
+.theme-button:hover {
+  background: #FFF;
+  color: #3A4145; }
 
 .inner-content {
   margin-left: 16%;
