--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -1,8 +1,10 @@
+$body-color: #3A4145;
+
 body {
   height: 100%;
   max-height: 100%;
   line-height: 1.6em;
-  color: #3A4145;
+  color: $body-color;
 }
 
 html {
@@ -10,26 +12,46 @@ html {
   max-height: 100%;
 }
 
-.header {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin-bottom: 0rem;
-  background-color: #39CFAA;
-  display: table;
+.home-template {
+
+  .header {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 0rem;
+    background-color: #39CFAA;
+    display: table;
+  }
+
+  .vertical-theme-header {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .inner-theme-header {
+    position: relative;
+    width: 80%;
+    max-width: 700px;
+    margin: 0px auto;
+    text-align: center;
+  }
+
+  .header-title {
+    text-decoration: none;
+    color: $body-color;
+  }
+}
+.theme-button {
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 10px;
+  color: #FFF;
 }
 
-.vertical-theme-header {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.inner-theme-header {
-  position: relative;
-  width: 80%;
-  max-width: 700px;
-  margin: 0px auto;
-  text-align: center;
+.theme-button:hover {
+  background: #FFF;
+  color: $body-color;
 }
 
 .inner-content {
