--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -519,7 +519,8 @@ body {
   height: 100%;
   max-height: 100%;
   line-height: 1.6em;
-  color: #3A4145; }
+  color: #3A4145;
+  background: grey; }
 
 html {
   height: 100%;
@@ -555,6 +556,24 @@ html {
 .theme-button:hover {
   background: #FFF;
   color: #3A4145; }
+
+nav {
+  width: 15%;
+  float: left; }
+  nav ul {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    margin-top: 10%; }
+
+#content {
+  position: relative;
+  width: 85%;
+  height: 100%;
+  margin-bottom: 0rem;
+  float: right;
+  display: table;
+  background: #FFF; }
 
 .inner-content {
   margin-left: 16%;
