--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -5,7 +5,7 @@
         <h1>
             <a href="{{@blog.url}}" rel="nofollow" class="header-title">{{@blog.title}}</a>
         </h1>
-        <a href="#" class="theme-button">Blog</a>
+        <a href="#blog" class="theme-button">Blog</a>
         <a href="{{@blog.url}}/portfolio" class="theme-button">Portfolio</a>
       </div>
     </div>
