--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -5,8 +5,12 @@
         <h1>
             <a href="{{@blog.url}}" rel="nofollow" class="header-title">{{@blog.title}}</a>
         </h1>
+        <hr class="theme-header-divider">
+        <p>Some text about me blahblahblah</p>
+        <hr class="small-header-divider">
         <a href="#blog" class="theme-button">Blog</a>
         <a href="{{@blog.url}}/portfolio" class="theme-button">Portfolio</a>
+
       </div>
     </div>
 
