--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -38,6 +38,18 @@ html {
     text-align: center;
   }
 
+  .theme-header-divider {
+    width: 50%;
+    margin: 20px auto;
+    border-top: 1px solid rgba(255, 255, 255, 0.14);
+  }
+
+  .small-header-divider {
+    width: 25%;
+    margin: 20px auto;
+    border-top: 1px solid rgba(255, 255, 255, 0.14);
+  }
+
   .header-title {
     text-decoration: none;
     color: $body-color;
