--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -75,14 +75,12 @@ html {
 }
 
 nav {
-  width: 15%;
-  float: left;
 
   ul {
     margin: 0 auto;
     text-align: center;
     width: 100%;
-    margin-top: 10%;
+    margin-top: 20%;
 
     a {
       color: #7C8188;
@@ -111,6 +109,70 @@ nav {
   height: 100%;
 }
 
-.sidebar {
-  display: none;
+.aside-nav {
+  float: left;
+  width: 15%;
+  height: 100%;
+  position: relative;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+}
+
+.footer-content {
+  position: absolute;
+}
+
+#social-navigation {
+  position: absolute;
+  bottom: 0px;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.social-links {
+  height: 50px;
+}
+
+.social-list {
+  display: inline-block;
+  list-style-type: none;
+  margin: 0px;
+  position: absolute;
+  bottom: 0px;
+}
+
+.social-item {
+  display: inline-block;
+  margin: 0px 1px 0px 0px;
+  line-height: 1em;
+
+  a {
+    display: block;
+    border: 1px solid white;
+    border-radius: 100%;
+    color: #FFF;
+    opacity: 0.8;
+    width: 32px;
+    line-height: 32px;
+    text-align: center;
+    height: 32px;
+    padding-left: 1px;
+    padding-top: 1px;
+  }
+
+  a:hover {
+    opacity: 1;
+  }
+}
+
+.copyright {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  color: #FFF;
+  opacity: 0.8;
 }
