--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -6,27 +6,16 @@
             <a href="{{@blog.url}}" rel="nofollow" class="header-title">{{@blog.title}}</a>
         </h1>
         <hr class="theme-header-divider">
+
         <p>Some text about me blahblahblah</p>
+
         <hr class="small-header-divider">
-        <a href="#blog" class="theme-button">Blog</a>
+
         <a href="{{@blog.url}}/portfolio" class="theme-button">Portfolio</a>
+        <a href="#blog" class="theme-button">Blog</a>
 
       </div>
     </div>
-
-    <div class="wrap clearfix">
-
-        {{#if @blog.logo}}
-            <!-- Logo -->
-            <div id="logo" class="h1">
-                <a id="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Logo"></a>
-            </div>
-        {{/if}}
-
-
-
-
-
-    </div> <!-- end #inner-header -->
+ <!-- end #inner-header -->
 
 </header> <!-- end header -->
