--- a/content/themes/nichole-theme/partials/navigation.hbs
+++ b/content/themes/nichole-theme/partials/navigation.hbs
@@ -2,7 +2,7 @@
     Eventually, these links will be editable in the Ghost Admin Interface
     and be inserted with the nav theme helper }}
 
-<nav id="site-navigation">
+<nav id="site-navigation" role="main">
     <ul>
         <li><a href="{{@blog.url}}">Home</a></li>
         <li><a href="{{@blog.url}}/portfolio">Portfolio</a></li>
@@ -10,3 +10,25 @@
         <li><a href="">Contact</a></li>
     </ul>
 </nav>
+<nav id="social-navigation">
+  <div class="social-links">
+    <ul class="social-list">
+      <li class="social-item">
+        <a href="http://twitter.com/nicholedwight">
+          <i class="fi-social-twitter"></i>
+        </a>
+      </li>
+      <li class="social-item">
+        <a href="http://github.com/nicholedwight">
+          <i class="fi-social-github"></i>
+        </a>
+      </li>
+      <li class="social-item">
+        <a title="Email nicholedwight@gmail.com" href="mailto:nicholedwight@gmail.com">
+          <i class="fi-mail"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<p class="copyright">© 2014 Nichole Dwight</p>
