removed full post from blog homepage

--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -590,26 +590,6 @@ nav ul {
     color: #FFF;
     cursor: pointer; }
 
-#content {
-  position: relative;
-  width: 85%;
-  height: 100%;
-  margin-bottom: 0rem;
-  float: right;
-  display: table;
-  background: #F2EFE8; }
-
-.inner-content {
-  margin-left: 16%;
-  height: 100%; }
-
-.footer {
-  position: relative;
-  bottom: 0; }
-
-.footer-content {
-  position: absolute; }
-
 #social-navigation {
   position: absolute;
   bottom: 0px;
@@ -644,6 +624,30 @@ nav ul {
     padding-top: 1px; }
   .social-item a:hover {
     opacity: 1; }
+
+#content {
+  position: relative;
+  width: 85%;
+  height: 100%;
+  float: right;
+  display: table;
+  background: #F2EFE8; }
+
+.inner-content {
+  height: 100%; }
+
+article:nth-of-type(even) {
+  background: purple; }
+
+.post-content {
+  margin-left: 10%; }
+
+.footer {
+  position: relative;
+  bottom: 0; }
+
+.footer-content {
+  position: absolute; }
 
 .copyright {
   position: absolute;
