--- a/content/themes/nichole-theme/partials/list-post.hbs
+++ b/content/themes/nichole-theme/partials/list-post.hbs
@@ -15,7 +15,7 @@
       {{/if}}
 
       <section class="entry-content clearfix">
-          {{excerpt}}... <a href="{{url}}">Read More</a>
+          {{excerpt}}... <a href="{{url}}" class="read-more">Read More</a>
       </section>
     </div>
   </article> <!-- end list article  -->
