--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -173,6 +173,38 @@ article {
 
 .post-content {
   text-align: center;
+  display: inline-block;
+  width: 30%;
+  margin-top: 4%;
+
+  header {
+    font-size: 26px;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+}
+
+.posted-circle {
+  background: #39CFAA;
+  width: 90px;
+  height: 90px;
+  border-radius: 100%;
+  vertical-align: top;
+  margin-top: 6%;
+  text-align: center;
+  font-size: 1.3em;
+  padding-top: 8px;
+  margin-left: 29%;
+  display: inline-block;
+
+  span {
+    display: block;
+    font-size: 1.5em;
+    text-transform: uppercase;
+  }
 }
 
 .read-more {
