--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -83,7 +83,7 @@ html {
 
 #personal-logo {
   display: block;
-  margin: 15px auto;
+  margin: 45px auto;
 }
 
 nav {
@@ -92,20 +92,25 @@ nav {
     margin: 0 auto;
     text-align: center;
     width: 100%;
-    margin-top: 20%;
+    margin-top: 30%;
 
-    a {
-      color: #7C8188;
-      text-decoration: none;
-    }
+    li {
+      margin-bottom: 10px;
 
-    a:hover {
-      color: #FFF;
-      cursor: pointer;
+      a {
+        color: #7C8188;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 1.2em;
+      }
+
+        a:hover {
+          color: #FFF;
+          cursor: pointer;
+      }
     }
   }
 }
-
 #social-navigation {
   position: absolute;
   bottom: 0px;
@@ -231,7 +236,7 @@ article {
   bottom: 0;
   width: 100%;
   text-align: center;
-  height: 80px;
+  height: 60px;
   padding-top: 15px;
 }
 
