--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -520,7 +520,7 @@ body {
   max-height: 100%;
   line-height: 1.6em;
   color: #3A4145;
-  background: #1C2024; }
+  background: #2fc09c; }
 
 html {
   height: 100%;
@@ -572,7 +572,8 @@ html {
   float: left;
   width: 15%;
   height: 100%;
-  position: relative; }
+  position: relative;
+  background: #2fc09c; }
 
 #personal-logo {
   display: block;
@@ -586,7 +587,7 @@ nav ul {
   nav ul li {
     margin-bottom: 10px; }
     nav ul li a {
-      color: #7C8188;
+      color: #F2EFE8;
       text-decoration: none;
       text-transform: uppercase;
       font-size: 1.2em; }
@@ -641,16 +642,19 @@ nav ul {
   height: 100%; }
 
 article:nth-of-type(even) {
-  background: #343434;
+  background: #455466;
   color: #F2EFE8; }
 
+article:nth-of-type(odd) {
+  background: #F2EFE8; }
+
 article {
-  min-height: 300px; }
+  min-height: 200px; }
 
 .post-content {
   text-align: center;
   display: inline-block;
-  width: 30%;
+  width: 50%;
   margin-top: 4%; }
   .post-content header {
     font-size: 26px; }
@@ -659,7 +663,7 @@ article {
       color: inherit; }
 
 .posted-circle {
-  background: #39CFAA;
+  background: #F3615F;
   width: 90px;
   height: 90px;
   border-radius: 100%;
@@ -668,8 +672,9 @@ article {
   text-align: center;
   font-size: 1.3em;
   padding-top: 8px;
-  margin-left: 29%;
-  display: inline-block; }
+  margin-left: 16%;
+  display: inline-block;
+  color: #FFF; }
   .posted-circle span {
     display: block;
     font-size: 1.5em;
@@ -679,20 +684,19 @@ article {
   display: block;
   margin: 15px auto 0px;
   padding: 3px 20px;
-  border: 2px solid #9EABB3;
+  background: #F3615F;
   text-decoration: none;
   text-align: center;
-  color: #9EABB3;
+  color: #FFF;
   border-radius: 30px;
   width: 150px;
-  opacity: 0.7; }
-
-.read-more:hover {
   opacity: 1; }
 
+.read-more:hover {
+  opacity: 0.7; }
+
 .pagination {
-  background: #1C2024;
-  color: #F2EFE8;
+  color: #000;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -703,29 +707,24 @@ article {
 .page-number {
   margin-top: 10px;
   border: 2px solid;
-  border-color: #F2EFE8;
+  border-color: #000;
   opacity: 0.8;
   padding: 3px 10px; }
 
-.older-posts {
+.button {
   display: inline-block;
   padding: 0px 15px;
-  border: 2px solid #F2EFE8;
+  border: 2px solid #000;
   text-decoration: none;
   border-radius: 30px;
-  color: #F2EFE8;
-  position: absolute;
+  color: #000;
+  position: absolute; }
+
+.older-posts {
   right: 0;
   margin-right: 50px; }
 
 .newer-posts {
-  display: inline-block;
-  padding: 0px 15px;
-  border: 2px solid #F2EFE8;
-  text-decoration: none;
-  border-radius: 30px;
-  color: #F2EFE8;
-  position: absolute;
   left: 0;
   margin-left: 50px; }
 
