--- a/content/themes/nichole-theme/partials/navigation.hbs
+++ b/content/themes/nichole-theme/partials/navigation.hbs
@@ -1,14 +1,16 @@
 {{! Here is where you edit the static links displayed on every page.
     Eventually, these links will be editable in the Ghost Admin Interface
     and be inserted with the nav theme helper }}
-<img src="/../assets/images/logo.png" alt="Logo" id="personal-logo">
+<a href="{{@blog.url}}">
+  <img src="/../assets/images/logo.png" alt="Logo" id="personal-logo">
+</a>
 
 <nav id="site-navigation" role="main">
     <ul>
         <li><a href="{{@blog.url}}">Home</a></li>
         <li><a href="{{@blog.url}}/portfolio">Portfolio</a></li>
-        <li><a href="{{@blog.url}}/blog">Blog</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="{{@blog.url}}/about">About</a></li>
+        <li><a href="{{@blog.url}}/contact">Contact</a></li>
     </ul>
 </nav>
 <nav id="social-navigation">
