--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -642,7 +642,7 @@ nav ul {
   height: 100%; }
 
 article:nth-of-type(even) {
-  background: #455466;
+  background: #525A6C;
   color: #F2EFE8; }
 
 article:nth-of-type(odd) {
@@ -663,7 +663,7 @@ article {
       color: inherit; }
 
 .posted-circle {
-  background: #F3615F;
+  background: #ff746f;
   width: 90px;
   height: 90px;
   border-radius: 100%;
@@ -684,7 +684,7 @@ article {
   display: block;
   margin: 15px auto 0px;
   padding: 3px 20px;
-  background: #F3615F;
+  background: #ff746f;
   text-decoration: none;
   text-align: center;
   color: #FFF;
@@ -693,10 +693,10 @@ article {
   opacity: 1; }
 
 .read-more:hover {
-  opacity: 0.7; }
+  background: #2fc09c; }
 
 .pagination {
-  color: #000;
+  color: #525A6C;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -706,19 +706,24 @@ article {
 
 .page-number {
   margin-top: 10px;
-  border: 2px solid;
-  border-color: #000;
+  border: 1px solid;
+  border-color: #525A6C;
   opacity: 0.8;
-  padding: 3px 10px; }
+  padding: 5px 10px 3px 10px; }
 
 .button {
   display: inline-block;
-  padding: 0px 15px;
-  border: 2px solid #000;
+  padding: 3px 20px;
+  border: 1px solid #525A6C;
   text-decoration: none;
   border-radius: 30px;
-  color: #000;
+  width: 150px;
+  color: #525A6C;
   position: absolute; }
+
+.button:hover {
+  background: #525A6C;
+  color: #FFF; }
 
 .older-posts {
   right: 0;
