--- a/content/themes/nichole-theme/default.hbs
+++ b/content/themes/nichole-theme/default.hbs
@@ -70,7 +70,7 @@
         <footer class="footer" role="contentinfo">
           <div class="footer-content">
 
-            
+
           </div>
         </footer> <!-- end footer -->
 
@@ -80,6 +80,8 @@
 
     <!-- Custom Scripts -->
     <script type="text/javascript" src="{{asset '/js/scripts.js'}}"></script>
+    <script type="text/javascript" src="{{asset '/js/libs/jquery.js'}}"></script>
+    <script type="text/javascript" src="{{asset '/js/libs/jquery.easing.1.3.js'}}"></script>
 
 </body>
 </html>
