--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -12,7 +12,7 @@
         <hr class="small-header-divider">
 
         <a href="{{@blog.url}}/portfolio" class="theme-button">Portfolio</a>
-        <a href="#blog" class="theme-button">Blog</a>
+        <a href="#blog" class="theme-button smoothscroll">Blog</a>
 
       </div>
     </div>
