--- a/content/themes/nichole-theme/partials/pagination.hbs
+++ b/content/themes/nichole-theme/partials/pagination.hbs
@@ -1,9 +1,9 @@
 <nav class="pagination" role="navigation">
     {{#if prev}}
-        <a class="newer-posts button" href="{{page_url prev}}#blog">&larr; Newer Posts</a>
+        <a class="newer-posts button" href="{{page_url prev}}#blog">&larr; Newer</a>
     {{/if}}
     <span class="page-number">Page {{page}} of {{pages}}</span>
     {{#if next}}
-        <a class="older-posts button" href="{{page_url next}}">Older Posts &rarr;</a>
+        <a class="older-posts button" href="{{page_url next}}">Older &rarr;</a>
     {{/if}}
 </nav>
