--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -1,7 +1,9 @@
 $body-color: #3A4145;
 // $background: #1C2024;
 $background: darken(#39CFAA, 5%);
-$published: #F3615F;
+// $published: #F3615F;
+$published: #DB6B71;
+$published: lighten(#FF534B, 7%);
 
 body {
   height: 100%;
@@ -171,7 +173,8 @@ nav {
 }
 
 article:nth-of-type(even) {
-  background: #455466;
+  // background: #455466;
+  background: #525A6C;
   color: #F2EFE8;
 }
 
@@ -234,11 +237,11 @@ article {
 }
 
 .read-more:hover {
-  opacity: 0.7;
+  background: $background;
 }
 
 .pagination {
-  color: #000;
+  color: #525A6C;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -249,20 +252,26 @@ article {
 
 .page-number {
   margin-top: 10px;
-  border: 2px solid;
-  border-color: #000;
+  border: 1px solid;
+  border-color: #525A6C;
   opacity: 0.8;
-  padding: 3px 10px;
+  padding: 5px 10px 3px 10px;
 }
 
 .button {
   display: inline-block;
-  padding: 0px 15px;
-  border: 2px solid #000;
+  padding: 3px 20px;
+  border: 1px solid #525A6C;
   text-decoration: none;
   border-radius: 30px;
-  color: #000;
+  width: 150px;
+  color: #525A6C;
   position: absolute;
+}
+
+.button:hover {
+  background: #525A6C;
+  color: #FFF;
 }
 
 .older-posts {
