added the spin me image of my face to header

--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -2,6 +2,7 @@
     <div class="vertical-theme-header">
       <div class="inner-theme-header">
         <!-- Title -->
+        <img src="/../assets/images/spinme.png" alt="Nichole's Face" class="spin_me">
         <h1>
             <a href="{{@blog.url}}" rel="nofollow" class="header-title">{{@blog.title}}</a>
         </h1>
