--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -1,8 +1,5 @@
 $body-color: #3A4145;
-// $background: #1C2024;
 $background: darken(#39CFAA, 5%);
-// $published: #F3615F;
-$published: #DB6B71;
 $published: lighten(#FF534B, 7%);
 
 body {
@@ -25,7 +22,11 @@ html {
     width: 100%;
     height: 100%;
     margin-bottom: 0rem;
-    background-color: #39CFAA;
+    background-image: url('/../assets/images/soporific.jpg');
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-attachment: fixed;
     display: table;
   }
 
@@ -195,7 +196,6 @@ nav {
 }
 
 article:nth-of-type(even) {
-  // background: #455466;
   background: #525A6C;
   color: #F2EFE8;
 }
