--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -2,7 +2,10 @@
     <div class="vertical-theme-header">
       <div class="inner-theme-header">
         <!-- Title -->
-        <img src="/../assets/images/spinme.png" alt="Nichole's Face" class="spin_me">
+        <div class="logo-container">
+          <img src="/../assets/images/spinme.png" alt="Nichole's Face" class="spin_me">
+          <img src="/../assets/images/logo.png" alt="Logo" class="spin-logo">
+        </div>
         <h1>
             <a href="{{@blog.url}}" rel="nofollow" class="header-title">{{@blog.title}}</a>
         </h1>
