--- a/content/themes/nichole-theme/partials/full-post.hbs
+++ b/content/themes/nichole-theme/partials/full-post.hbs
@@ -5,10 +5,10 @@
     <header class="article-header">
 
         <h1 class="h2">
-            <a href="{{url}}" rel="bookmark" title="{{title}}">{{title}}</a>
+            {{title}}
         </h1>
 
-        <p class="byline vcard">
+        <!-- <p class="byline vcard">
             Posted
             <time class="updated"
                   datetime="{{date published_at format='YYYY-MM-DD'}}"
@@ -25,7 +25,7 @@
                 <span class="amp">&amp;</span>
                 filed under <span class="tags-title">{{tags}}</span>
             {{/if}}
-        </p>
+        </p> -->
 
     </header> <!-- end article header -->
 
