--- a/content/themes/nichole-theme/default.hbs
+++ b/content/themes/nichole-theme/default.hbs
@@ -38,6 +38,7 @@
 
     <!-- Include custom CSS -->
     <link rel="stylesheet" id="custom-stylesheet-css" href="{{asset 'css/custom.css'}}" type="text/css" media="all">
+    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 
 
