comment field shows and hides, list post paddings adjusted, social nav links now stick to absolute bottom

--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -636,7 +636,7 @@ nav ul {
 #social-navigation {
   position: absolute;
   bottom: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   width: 100%; }
 
 .social-links {
@@ -668,6 +668,15 @@ nav ul {
   .social-item a:hover {
     opacity: 1; }
 
+.copyright {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 100%;
+  color: #FFF;
+  opacity: 0.8; }
+
 #content {
   position: relative;
   width: 85%;
@@ -687,7 +696,7 @@ article:nth-of-type(odd) {
   background: #F2EFE8; }
 
 article {
-  min-height: 200px; }
+  padding-bottom: 60px; }
 
 .post-content {
   text-align: center;
@@ -699,6 +708,8 @@ article {
     .post-content header a {
       text-decoration: none;
       color: inherit; }
+  .post-content .entry-content {
+    font-size: 1.3em; }
 
 .posted-circle {
   background: #ff746f;
@@ -778,15 +789,21 @@ article {
 .footer-content {
   position: absolute; }
 
-.copyright {
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
-  color: #FFF;
-  opacity: 0.8; }
-
 /* Page/Full-Post CSS */
+.hidden {
+  display: none; }
+
+.show-comments {
+  text-align: center;
+  font-size: 0.8em;
+  position: absolute;
+  left: 0;
+  margin-left: 43%; }
+
+#disqus_thread {
+  width: 50%;
+  margin: 30px auto; }
+
 .article-header {
   text-align: center;
   font-size: 1.7em; }
