--- a/content/themes/nichole-theme/partials/full-post.hbs
+++ b/content/themes/nichole-theme/partials/full-post.hbs
@@ -31,6 +31,7 @@
 
     <section class="entry-content clearfix">
         {{content}}
+        <a href="#" class="show-comments button">Comment</a>
     </section> <!-- end article section -->
 
     <footer class="article-footer">
