--- a/content/themes/nichole-theme/partials/header.hbs
+++ b/content/themes/nichole-theme/partials/header.hbs
@@ -11,7 +11,7 @@
         </h1>
         <hr class="theme-header-divider">
 
-        <p>Some text about me blahblahblah</p>
+        <p class="header-byline">I'm Nichole, a hybrid web designer and developer based in Bristol.</p>
 
         <hr class="small-header-divider">
 
