header font sizes

--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -57,12 +57,14 @@ html {
   }
 
   .header-title {
+    font-size: 1.5em;
     text-decoration: none;
     color: #FFF;
     text-shadow: 0.3px 0.3px 0.5px #000;
   }
 
   .header-byline {
+    font-size: 1.2em;
     width: 45%;
     margin: 0 auto;
     color: #FFF;
