--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -557,10 +557,12 @@ html {
   margin: 20px auto;
   border-top: 1px solid rgba(255, 255, 255, 0.14); }
 .home-template .header-title {
+  font-size: 1.5em;
   text-decoration: none;
   color: #FFF;
   text-shadow: 0.3px 0.3px 0.5px #000; }
 .home-template .header-byline {
+  font-size: 1.2em;
   width: 45%;
   margin: 0 auto;
   color: #FFF;
