tweaked the padding on social nav icons

--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -674,8 +674,7 @@ nav ul {
     line-height: 32px;
     text-align: center;
     height: 32px;
-    padding-left: 1px;
-    padding-top: 1px; }
+    padding-left: 1px; }
   .social-item a:hover {
     opacity: 1; }
 
