--- a/content/themes/nichole-theme/scss/_custom.scss
+++ b/content/themes/nichole-theme/scss/_custom.scss
@@ -46,32 +46,57 @@ html {
   }
 
   .theme-header-divider {
-    width: 50%;
     margin: 20px auto;
     border-top: 1px solid rgba(255, 255, 255, 0.14);
+
+    @include mq(XS) {
+      width: 90%;
+    }
+    @include mq(S) {
+      width: 50%;
+    }
   }
 
   .small-header-divider {
-    width: 25%;
     margin: 20px auto;
     border-top: 1px solid rgba(255, 255, 255, 0.14);
+
+    @include mq(XS) {
+      width: 60%;
+    }
+    @include mq(S) {
+      width: 25%;
+    }
   }
 
   .header-title {
-    font-size: 1.5em;
+    font-size: 1em;
     text-decoration: none;
     color: #FFF;
+
+    @include mq(S) {
+      font-size: 1.2em;
+      line-height: 1em;
+    }
+    @include mq(M) {
+      font-size: 1.5em;
+    }
     }
 
   .header-byline {
-    font-size: 1.2em;
-    width: 45%;
-    margin: 0 auto;
-    color: #FFF;
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+      font-size: 1.2em;
+      width: 80%;
+      margin: 0 auto;
+      color: #FFF;
+      -webkit-hyphens: none;
+      -moz-hyphens: none;
+      -ms-hyphens: none;
+      hyphens: none;
+
+    @include mq(M) {
+      font-size: 1.2em;
+      width: 45%;
+    }
     }
 }
 .theme-button {
@@ -88,10 +113,15 @@ html {
 }
 
 .logo-container {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  margin: -20px auto 50px;
+  display: none;
+
+  @include mq(SM) {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin: -20px auto 50px;
+    display: block;
+  }
 }
 
 .spin_me {
@@ -135,11 +165,16 @@ html {
 }
 
 .aside-nav {
+  display: none;
+
+  @include mq(ML) {
+  display: block;
   float: left;
   width: 15%;
   height: 100%;
   position: relative;
   background: $background;
+}
 }
 
 #personal-logo {
@@ -175,8 +210,12 @@ nav {
 #social-navigation {
   position: absolute;
   bottom: 0px;
-  margin-bottom: 35px;
+  margin-bottom: 55px;
   width: 100%;
+
+  @include mq(LL) {
+    margin-bottom: 35px;
+  }
 }
 
 .social-links {
@@ -225,12 +264,16 @@ nav {
 }
 
 #content {
+  width: 100%;
   position: relative;
-  width: 85%;
   height: 100%;
   float: right;
   display: table;
   background: #F2EFE8;
+
+  @include mq(ML) {
+  width: 85%;
+  }
 }
 
 .inner-content {
@@ -266,28 +309,49 @@ article {
   }
 
   .entry-content {
+    font-size: 1em;
+    width: 100%;
+
+    @include mq(M) {
     font-size: 1.3em;
+    width: 90%;
+    }
   }
 }
 
 .posted-circle {
   background: $published;
-  width: 90px;
-  height: 90px;
   border-radius: 100%;
   vertical-align: top;
-  margin-top: 6%;
-  text-align: center;
-  font-size: 1.3em;
-  padding-top: 8px;
-  margin-left: 16%;
   display: inline-block;
   color: #FFF;
+  font-size: 1em;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  line-height: 0.8em;
+  padding-top: 6px;
+  margin-top: 17%;
+  margin-left: 7%;
+
+  @include mq(SM) {
+  margin-top: 6%;
+  margin-left: 16%;
+  width: 90px;
+  height: 90px;
+  line-height: 1.2em;
+  font-size: 1.3em;
+  padding-top: 8px;
+  }
 
   span {
     display: block;
-    font-size: 1.5em;
+    font-size: 1.1em;
     text-transform: uppercase;
+
+    @include mq(SM) {
+    font-size: 1.5em;
+    }
   }
 }
 
@@ -300,8 +364,12 @@ article {
   text-align: center;
   color: #FFF;
   border-radius: 30px;
-  width: 150px;
+  width: 116px;
   opacity: 1;
+
+  @include mq(SM) {
+    width: 150px;
+  }
 }
 
 .read-more:hover {
@@ -319,11 +387,16 @@ article {
 }
 
 .page-number {
+  display: none;
+
+  @include mq(SM) {
+  display: inline;
   margin-top: 10px;
   border: 1px solid;
   border-color: #525A6C;
   opacity: 0.8;
   padding: 5px 10px 3px 10px;
+  }
 }
 
 .button {
